# maskfill

./: .readthedocs.yaml  LICENSE  README.md  maskfill.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: cli.md  conf.py  index.md  python-usage.ipynb  requirements.txt
docs/apidocs/: index.rst
docs/apidocs/maskfill/: maskfill.maskfill.rst  maskfill.rst
example_m51/: m51_mask.fits  m51_org.fits  m51_with_cosmicrays.fits
example_synthetic/: synth_im.fits  synth_mask.fits
maskfill/: __init__.py  maskfill.py
tests/: default.fits  test_maskfill.py
